push processing markdown as far into compile-time as possible, due to it being expensive. Use a regex for the links on-demand also: - make sure the rest of the code aligns with this new scheme - adjust paragraph top alignment, and change existing code to cope - in rss make sure to reverse categories other than 'all'

--- a/css/pup.css
+++ b/css/pup.css
@@ -12,6 +12,8 @@ body, html
 
 a {color: #6ca6cd; text-decoration: none;} /* deep sky blue 3 */
 
+p { margin-top: 0px }
+
 hr
 { height: 1px;
   margin: 1em 1em 2em 0;
